



########### install files ###############

install( FILES arrow.png qmark-blue.png qmark-red.png token.png train.png  DESTINATION  ${DATA_INSTALL_DIR}/atlantik/pics )




#original Makefile.am contents follow:

#boardicondir = $(kde_datadir)/atlantik/pics
#boardicon_DATA = arrow.png qmark-blue.png qmark-red.png token.png train.png
