icondir = $(kde_datadir)/atlantik/themes/default/tokens
icon_DATA = badge.png beachball.png bell.png bomb.png cat.png cookie.png \
            cube.png eyeball.png flag.png ghost.png globe.png hamburger.png \
            lips.png puzzle.png pyramid.png skull.png traffic_light.png \
            wizard.png
